--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,7 @@ body { margin-bottom: 20px; }
 #list { margin-bottom: 0px; }
 
 .deprecation-warning {
-  background: rgb(255, 243, 160);
-  padding: 1em;
-  text-align: center;
-  margin-bottom: 1em;
-  margin-top: -1em;
+  font-size: 200%;
+  font-weight: bold;
+  padding: 25px;
 }
